# OpenClawPixelPet

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: api.py  assets.py  gifdecode.py  hitview.py  main.py  openclaw_bridge.py
config/: bridge.example.env
scripts/: start.sh  start_all.sh  start_bridge.sh  stop.sh  stop_all.sh  stop_bridge.sh
